--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "api/app.py",
+      "src": "CS50X-Final-Project/app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/app.py"
+      "dest": "CS50X-Final-Project/app.py"
     }
   ]
 }
